[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/guns/gun1-1.gd" type="Script" id=1]
[ext_resource path="res://textures/lights/light.png" type="Texture" id=2]
[ext_resource path="res://textures/mercenaries/guns.png" type="Texture" id=3]
[ext_resource path="res://textures/mercenaries/hands.png" type="Texture" id=4]
[ext_resource path="res://sound/shoot.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "shoot",
"speed": 60.0
} ]

[sub_resource type="Curve" id=6]
min_value = -1.0
max_value = 2.0
_data = [ Vector2( 0.00581396, 1.28068 ), 0.0, -0.589466, 0, 0, Vector2( 1, -0.856818 ), -0.947202, 0.0, 0, 0 ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "shoot",
"speed": 60.0
} ]

[sub_resource type="Curve" id=12]
min_value = -564.08
max_value = -4.8
_data = [ Vector2( 0, 1.36365 ), 0.0, 0.0, 0, 0, Vector2( 1, -402.651 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 0.67, 0.53399, 0.0871, 1, 0, 0, 0, 0 )

[node name="gun" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="TimerParticles" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="cooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="latency" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": "latency between guns"
}

[node name="rafagaR" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": "latency between guns"
}

[node name="rafagaL" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": "latency between guns"
}

[node name="handL" type="AnimatedSprite" parent="."]
position = Vector2( 11, -5 )
rotation = -1.5708
scale = Vector2( 1, -1 )
frames = SubResource( 5 )
animation = "shoot"

[node name="handR" type="AnimatedSprite" parent="."]
position = Vector2( 11, 5 )
rotation = 1.5708
frames = SubResource( 5 )
animation = "shoot"

[node name="fireR" type="CPUParticles2D" parent="."]
position = Vector2( 19, 5 )
emitting = false
lifetime = 0.17
gravity = Vector2( 0, 0 )
initial_velocity = 32.26
angular_velocity_random = 1.0
tangential_accel_random = 1.0
scale_amount_curve = SubResource( 6 )
color = Color( 1, 0.913725, 0.2, 1 )

[node name="fireL" type="CPUParticles2D" parent="."]
position = Vector2( 19, -5 )
emitting = false
lifetime = 0.17
gravity = Vector2( 0, 0 )
initial_velocity = 32.26
angular_velocity_random = 1.0
tangential_accel_random = 1.0
scale_amount_curve = SubResource( 6 )
color = Color( 1, 0.913725, 0.2, 1 )

[node name="gunL" type="AnimatedSprite" parent="."]
position = Vector2( 12, -4.5 )
rotation = -1.5708
scale = Vector2( 1, -1 )
frames = SubResource( 11 )
animation = "shoot"

[node name="gunR" type="AnimatedSprite" parent="."]
position = Vector2( 12, 4.5 )
rotation = 1.5708
frames = SubResource( 11 )
animation = "shoot"

[node name="rayR" type="RayCast2D" parent="."]
position = Vector2( 10, 5 )
scale = Vector2( 1, 0.3 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="laser" type="Line2D" parent="rayR"]
visible = false
position = Vector2( -15, -4.82667e-05 )
scale = Vector2( 1, 3.33333 )
points = PoolVector2Array( 15, 0, 200, 0 )
width = 0.3
default_color = Color( 1, 0, 0, 1 )

[node name="rayL" type="RayCast2D" parent="."]
position = Vector2( 10, -5 )
scale = Vector2( 1, 0.3 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="laser" type="Line2D" parent="rayL"]
visible = false
position = Vector2( -15, -4.82667e-05 )
scale = Vector2( 1, 3.33333 )
points = PoolVector2Array( 15, 0, 200, 0 )
width = 0.3
default_color = Color( 1, 0, 0, 1 )

[node name="shellR" type="CPUParticles2D" parent="."]
position = Vector2( 12.5, 5 )
emitting = false
amount = 120
lifetime = 10.0
local_coords = false
direction = Vector2( 0, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
initial_velocity_random = 0.3
linear_accel_random = 0.27
linear_accel_curve = SubResource( 12 )
damping = 50.0
color_ramp = SubResource( 13 )

[node name="shellL" type="CPUParticles2D" parent="."]
position = Vector2( 12.5, -5 )
emitting = false
amount = 120
lifetime = 10.0
local_coords = false
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
initial_velocity_random = 0.3
linear_accel_random = 0.27
linear_accel_curve = SubResource( 12 )
damping = 50.0
color_ramp = SubResource( 13 )

[node name="shotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Light" type="Light2D" parent="."]
visible = false
position = Vector2( 16, 0 )
enabled = false
texture = ExtResource( 2 )
texture_scale = 0.5
color = Color( 0.952941, 0.823529, 0.439216, 1 )
shadow_enabled = true

[connection signal="timeout" from="TimerParticles" to="." method="_on_TimerParticles_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="latency" to="." method="_on_latency_timeout"]
[connection signal="timeout" from="rafagaR" to="." method="_on_rafagaR_timeout"]
[connection signal="timeout" from="rafagaL" to="." method="_on_rafagaL_timeout"]
